# mlx90640_ros

./: CMakeLists.txt  package.xml  readme.md
config/: mlx906040_config.yaml  mlx90640_config.yaml
include/mlx90640/: MLX90640_API.h  MLX90640_I2C_Driver.h
launch/: mlx90640.launch.py
src/: MLX90640_API.c  MLX90640_API.cpp  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.cpp  MLX90640_node.cpp
